Volume world does not update properly #38134

Closed
opened 2014-01-08 22:52:14 +01:00 by Thomas Dinges · 14 comments

System Information
Linux and Windows x64

Blender Version
Broken: 7bcb34e

Short description of error

  • Start Cycles Viewport rendering
  • Add a World Volume Shader

The 3D View will not display the volume. Restart the Viewport render and it works. Looks like a missing update somewhere.
This bug does not occur for Mesh Objects.

**System Information** Linux and Windows x64 **Blender Version** Broken: 7bcb34e **Short description of error** - Start Cycles Viewport rendering - Add a World Volume Shader The 3D View will not display the volume. Restart the Viewport render and it works. Looks like a missing update somewhere. This bug does not occur for Mesh Objects.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Thomas Dinges 2014-01-08 22:52:14 +01:00
Author
Owner

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by blender/blender-addons-contrib@2d073bbf21

This issue was referenced by blender/blender-addons-contrib@2d073bbf216feece9b23a53919efba282f9e376b

This issue was referenced by 2d073bbf21

This issue was referenced by 2d073bbf216feece9b23a53919efba282f9e376b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2d073bbf21.

Closed by commit 2d073bbf21.
Author
Owner

Thanks, found one more issue though. :)

After adding the volume, remove it again. The default cube is black then.

Thanks, found one more issue though. :) After adding the volume, remove it again. The default cube is black then.
Author
Owner

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I can't redo that, I tried removing the node from the properties editor and node editor, and removing the world entirely. It seems to update ok in all those cases.

I can't redo that, I tried removing the node from the properties editor and node editor, and removing the world entirely. It seems to update ok in all those cases.
Author
Owner

Sorry, I should have been more precise. It only happens with a Scatter Volume node.

I press "Remove" inside the Properties Editor. Also confirmed on OS X now.

Sorry, I should have been more precise. It only happens with a Scatter Volume node. I press "Remove" inside the Properties Editor. Also confirmed on OS X now.

This issue was referenced by blender/blender-addons-contrib@8c0f9365c0

This issue was referenced by blender/blender-addons-contrib@8c0f9365c0387911a9891eac9e9a561c02dc9964

This issue was referenced by 8c0f9365c0

This issue was referenced by 8c0f9365c0387911a9891eac9e9a561c02dc9964

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8c0f9365c0.

Closed by commit 8c0f9365c0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38134
No description provided.