Fix T38134: cycles viewport render not updating when adding a world volume shader.